2006-08-19  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/MediaManager.py (Convert2Rel._run): Correct logic.

2006-08-18  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* src/PluginUtils/_Tool.py (BatchTool.run): Remove redundant method.
	* src/plugins/MediaManager.py: Add list of affected paths to the
	confirmation; add new operation.

2006-08-17  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/MediaManager.py: Change info wording.
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase._sortbyname): Remove
	obsolete method.
	* src/NameDisplay.py: Correct constants to accomodate Name change.
	* src/GrampsDb/_GrampsBSDDB.py: Upgrade the names.
	* src/RelLib/_Name.py: Remove sname attribute.

2006-08-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: apply filter to calcuated data before
	deleting a person from the list

2006-08-17  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix #0000349: NarrativeWebsite sorting

2006-08-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: rebuild after compare and
	merge (bug #350)

2006-08-17  Alex Roitman  <shura@gramps-project.org>
	* src/StartupDialog.py (__init__): Pass its class to Assistant.
	* src/Exporter.py (__init__): Pass its class to Assistant.
	* src/Assistant.py (__init__): Accept parent class (to make
	assistants unique *only* within their type);
	(prepare_text_page): Use markup in the text.
	* NEWS: Update.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/plugins/MediaManager.py: Add new plugin (still in progress).

2006-08-16  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: rebuild display after a merge of
	two people (bug #348)

2006-08-16  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py (Disconnected): Add verification rule;
	(Verify.run_tool): Use the new rule.
	* src/Filters/Rules/Person/_Disconnected.py (apply): Fix rule.